Add feature for X [S3f7CT]

--- a/config.json
+++ b/config.json
@@ -2,3 +2,4 @@ Refactor codebase with Z [081H6a] line 3.1
 Add feature for X [npWod9] line 5.1
 Add test case for W [AOVL58] line 7.3
 Add test case for W [mgkldy] line 9.1
+Add feature for X [S3f7CT] line 10.2
